@@ -1,3 +1,5 @@
+- Refactor: Add missing Department methods in order to mantain retro-compability
+
 7.1.0 (06-02-2023)
 - Refactor: Add entity Department, from academic-core
 
